--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <title>Vite + React</title>
   </head>
-  <body class="font-lato">
+  <body class="font-lato w-full">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
